--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "global": "^4.3.2",
+    "gulp": "^3.9.1",
+    "node-sass": "^4.5.3",
+    "npm": "^5.4.2"
   }
 }
